<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/about_qwc" />

        <TextView
            android:id="@+id/intromain"
            style="@style/IntroduceStyle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:drawablePadding="5dp"
            android:text="@string/intro_main" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/intro1"
                style="@style/IntroduceStyle1"
                android:text="@string/intro_1" />

            <TextView
                android:id="@+id/intro2"
                style="@style/IntroduceStyle1"
                android:layout_marginTop="5dp"
                android:text="@string/intro_2" />

            <TextView
                android:id="@+id/intro3"
                style="@style/IntroduceStyle1"
                android:layout_marginTop="5dp"
                android:text="@string/intro_3" />

            <TextView
                android:id="@+id/intro4"
                style="@style/IntroduceStyle1"
                android:layout_marginTop="5dp"
                android:text="@string/intro_4" />

            <TextView
                android:id="@+id/intro5"
                style="@style/IntroduceStyle1"
                android:layout_marginTop="5dp"
                android:text="@string/intro_5" />

            <TextView
                android:id="@+id/intro6"
                style="@style/IntroduceStyle1"
                android:layout_marginTop="5dp"
                android:text="@string/intro_6" />

            <TextView
                android:id="@+id/intro7"
                style="@style/IntroduceStyle1"
                android:layout_marginTop="5dp"
                android:text="@string/intro_7" />

            <TextView
                android:id="@+id/intro8"
                style="@style/IntroduceStyle1"
                android:layout_marginTop="5dp"
                android:text="@string/intro_8" />

            <TextView
                android:id="@+id/intro9"
                style="@style/IntroduceStyle1"
                android:layout_marginTop="5dp"
                android:text="@string/intro_9" />

            <TextView
                android:id="@+id/intro10"
                style="@style/IntroduceStyle1"
                android:layout_marginTop="5dp"
                android:text="@string/intro_10" />

            <TextView
                android:id="@+id/intro11"
                style="@style/IntroduceStyle1"
                android:layout_marginTop="5dp"
                android:text="@string/intro_11" />        </LinearLayout>
    </LinearLayout>

</ScrollView>