<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <!-- navigaiton bar -->

    <include layout="@layout/navigationvbar_style" />
    <!-- taste -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp" >

        <TextView
            style="@style/text_green_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/taste" />

        <RatingBar
            style="@style/roomRatingBar_big"
            android:id="@+id/commentTasteRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:numStars="5"
            android:stepSize="1" />
    </FrameLayout>
    <!-- condition -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp" >

        <TextView
            style="@style/text_green_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/condition" />

        <RatingBar
            style="@style/roomRatingBar_big"
            android:id="@+id/commentConditionRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:numStars="5"
            android:stepSize="1" />
    </FrameLayout>
    <!-- services -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp" >

        <TextView
            style="@style/text_green_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/services" />

        <RatingBar
            android:id="@+id/commentServicesRatingBar"
            style="@style/roomRatingBar_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:numStars="5"
            android:stepSize="1" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >

        <EditText
            android:id="@+id/commentContentEt"
            style="@style/text_green_14"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="top"
            android:hint="@string/comment_hit" />

        <TextView
            style="@style/text_black_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/input_limit_prompt" />
    </FrameLayout>

    <Button
        android:id="@+id/commentSubmitBtn"
        android:layout_marginTop="20dp"
        style="@style/text_white_16"
        android:background="@drawable/textview_bg_green"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/submit" />

</LinearLayout>