<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/white" >

    <ImageButton
        android:id="@+id/photoBackIBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="10dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp"
        android:src="@drawable/return_gray" />
    <!-- titile display -->

    <TextView
        android:id="@+id/photoTitleTv"
        style="@style/text_green_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/my_photo" />

    <Button
        android:id="@+id/photoChooseBtn"
        style="@style/text_green_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_marginRight="10dp"
        android:background="@null"
        android:text="@string/choose" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_gravity="bottom"
        android:background="#aaaaaa" />

</FrameLayout>