<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.gservfocus.qwc.other.parallax.ParallaxListView
        android:id="@+id/moreListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="@color/gray"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:zoomRatio="1.4" >
    </com.gservfocus.qwc.other.parallax.ParallaxListView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" >

        <com.gservfocus.qwc.activity.view.RoundedImageView
            android:id="@+id/personPhotoImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_person"
            app:border_color="#139266"
            app:border_width="0dip"
            app:corner_radius="10dip"
            app:mutate_background="true"
            app:oval="true" />

        <TextView
            android:id="@+id/personNameTxt"
            style="@style/text_white_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personPhotoImageView"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/app_name" />

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personNameTxt" >

            <TextView
                android:id="@+id/level"
                style="@style/AverageWidthMacthLayoutStyle"
                android:gravity="center_horizontal"
                android:text="@string/rank"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/score"
                style="@style/AverageWidthMacthLayoutStyle"
                android:gravity="center_horizontal"
                android:text="@string/grade"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>